public/css/landing/style.css
/* ... */
.footer__wrapper-inner-social-subscribe-btn:hover {
  background: var(--button-background-color-light);
  border: 0.752783px solid var(--button-border-color);
  box-shadow: inset 0 -4px 0 var(--button-border-color);
  color: var(--text-color);
  cursor: pointer;
  transition: 0.3s ease-in-out;
  will-change: background, color, border, box-shadow;
}

.footer__wrapper-inner-social-links {
  display: flex;
  gap: 37px;
}

.footer__wrapper-inner-social-links a {
  height: 28px;
}

.footer__wrapper-inner-social-links svg {
  width: 100%;
  height: 100%;
}

.footer__wrapper-bottom {
  display: flex;
  gap: 160px;
  padding: 50px 0;
  /* TODO: change it to var*/
  border-top: 1px solid hsla(0, 0%, 74%);
}

.footer__wrapper-bottom-text {
  color: var(--button-background-color-dark);
  font-size: initial;
  font-weight: 600;
  line-height: var(--line-height-base);
  opacity: 0.9;
}

.footer__wrapper-bottom-text a {
  color: inherit;
  text-decoration: underline;
  text-underline-offset: 4px;
}

.footer__wrapper-bottom-text-about {
  padding-bottom: 32px;
}

.footer__wrapper-bottom-logo-mobile {
  display: none;
}

@media (max-width: 480px) {
  .footer-landing {
    border-radius: 0px;
    margin: 0;
  }

  .footer__wrapper {
    padding-top: 60px;
    padding-bottom: 0px;
  }

  .footer__wrapper-inner-menu>ul {
    flex-wrap: wrap;
    gap: 42px;
  }

  .footer__wrapper-inner-menu>ul>li {
    flex-basis: 40%;
  }

  .footer__wrapper-inner {
    gap: 45px;
    padding-bottom: 34px;
  }

  .footer__wrapper-bottom {
    gap: 30px;
    padding: 40px 0;
  }

  .footer__wrapper-bottom-logo {
    display: none;
  }

  .footer__wrapper-bottom-logo-mobile {
    width: 35%;
    display: unset;
  }
}

/* Footer section end */

